# tavern-engine

./: '  .clang-format  .gitignore  .gitmodules  .rgignore  CMakeLists.txt  GenerateProjects.bat  GenerateProjects_Ninja.bat  README.md  SetupProject.py  Tavern.sln  conanfile.py  imgui.ini
.conan/profiles/: linux_debug_clang  windows_debug_clang
EditorTestProject/: Cube.cpp
EditorTestProject/.Taverner/: CMakeLists.txt  project.config
EngineTestProject/: CMakeLists.txt
EngineTestProject/Assets/Materials/: Backpack.material  Cube.material  Ground.material  Light.material
EngineTestProject/src/: Backpack.cpp  Backpack.h  Cube.cpp  Cube.h  Ground.cpp  Ground.h  Light.cpp  Light.h  Player.cpp  Player.h  main.cpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Materials/: Backpack.material  Backpack.material.json  Cube.material  Cube.material.json  Light.material  Light.material.json
Sandbox/src/: Backpack.cpp  Cube.cpp  Cube.h  Light.cpp  SandboxApp.cpp  main.cpp
Tavern/: CMakeLists.txt
Tavern/Assets/Shaders/: LitShader.frag  UnlitShader.frag  UnlitShader.vert
Tavern/src/: Tavern.h
Tavern/src/Tavern/: Core.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Log.cpp  Log.h  Window.cpp  Window.h
Tavern/src/Tavern/Assets/Shaders/: LitShader.frag  UnlitShader.frag
Tavern/src/Tavern/Components/: BaseComponent.cpp  BaseComponent.h  BaseRenderComponent.cpp  BaseRenderComponent.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  PointLightComponent.cpp  PointLightComponent.h  RenderComponent.cpp  RenderComponent.h  ScriptComponent.cpp  ScriptComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h
Tavern/src/Tavern/Core/: Core.h  Engine.cpp  Engine.h  KeyCodes.h  Log.cpp  Log.h  Time.cpp  Time.h  TimeManager.cpp  TimeManager.h
Tavern/src/Tavern/Events/: ApplicationEvent.h  Event.h  EventListener.cpp  EventListener.h  EventListenerInterface.h  EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h
Tavern/src/Tavern/Input/: InputManager.cpp  InputManager.h  MouseCodes.h
Tavern/src/Tavern/Renderer/: Camera.cpp  Camera.h  Cursor.cpp  Cursor.h  Framebuffer.cpp  Framebuffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Tavern/src/Tavern/Renderer/Shaders/: LitShader.frag  Shader.frag  Shader.vert  UnlitShader.frag  UnlitShader.vert
Tavern/src/Tavern/Resources/: MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ShaderResource.cpp  ShaderResource.h  TextureResource.cpp  TextureResource.h
Tavern/src/Tavern/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  ScriptRegistry.cpp  ScriptRegistry.h  UserDefinedEntityRegistry.cpp  UserDefinedEntityRegistry.h
Tavern/src/Tavern/UI/: Button.cpp  Button.h  FileDialog.cpp  FileDialog.h  Image.cpp  Image.h  MenuBar.cpp  MenuBar.h  Panel.cpp  Panel.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h
Taverner/: CMakeLists.txt
Taverner/src/: main.cpp
Taverner/src/Taverner/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  FileSystemWindow.cpp  FileSystemWindow.h  GameWindow.cpp  GameWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectConfig.cpp  ProjectConfig.h  SceneWindow.cpp  SceneWindow.h  main.cpp
Taverner/src/Taverner/ComponentInspectors/: CameraComponentInspector.cpp  CameraComponentInspector.h  ComponentInspector.h  LightComponentInspector.cpp  LightComponentInspector.h  MeshComponentInspector.cpp  MeshComponentInspector.h  ScriptComponentInspector.cpp  ScriptComponentInspector.h  TransformComponentInspector.cpp  TransformComponentInspector.h
Taverner/src/Taverner/Core/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  ProjectConfig.cpp  ProjectConfig.h
Taverner/src/Taverner/Events/: EditorEvents.cpp  EditorEvents.h
Taverner/src/Taverner/Windows/: EditorWindow.cpp  EditorWindow.h  FileSystemWindow.cpp  FileSystemWindow.h  GameWindow.cpp  GameWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectWindow.cpp  ProjectWindow.h  SceneWindow.cpp  SceneWindow.h
